* debian/control:   - add libpcre3-dev
(bzr r159.1.5)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 nux (0.9.14-0ubuntu1) natty; urgency=low
 
   * New upstream release.
-  * New upstream release.
+  * debian/control:
+    - add libpcre3-dev
 
  -- Didier Roche <didrocks@ubuntu.com>  Fri, 14 Jan 2011 19:13:24 +0100
 
