* debian/rules:   - bump shlib
(bzr r159.1.6)

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nux (0.9.14-0ubuntu1) natty; urgency=low
   * New upstream release.
   * debian/control:
     - add libpcre3-dev
+  * debian/rules:
+    - bump shlib
 
  -- Didier Roche <didrocks@ubuntu.com>  Fri, 14 Jan 2011 19:13:24 +0100
 
