--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nux (0.9.14-0ubuntu2) UNRELEASED; urgency=low
+nux (0.9.14-0ubuntu2) natty; urgency=low
 
   * debian/control:
     - make the -dev package depends on libpcre3-dev as well
   * fix in trunk to add it to the .pc file and merge to the packaging branch
 
- -- Didier Roche <didrocks@ubuntu.com>  Fri, 14 Jan 2011 21:20:34 +0100
+ -- Didier Roche <didrocks@ubuntu.com>  Fri, 14 Jan 2011 21:28:40 +0100
 
 nux (0.9.14-0ubuntu1) natty; urgency=low
 
