--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nux (0.9.16-0ubuntu1) UNRELEASED; urgency=low
+nux (0.9.16-0ubuntu1) natty; urgency=low
 
   * New upstream release.
   * debian/rules:
     - bump shlib
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 20 Jan 2011 17:57:58 +0100
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 20 Jan 2011 19:02:56 +0100
 
 nux (0.9.14-0ubuntu2) natty; urgency=low
 
