--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nux (0.9.18-0ubuntu1) UNRELEASED; urgency=low
+nux (0.9.18-0ubuntu1) natty; urgency=low
 
   * New upstream release.
   * debian/rules:
     - bump shlib
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 27 Jan 2011 13:38:49 +0100
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 27 Jan 2011 14:31:24 +0100
 
 nux (0.9.16-0ubuntu1) natty; urgency=low
 
