* debian/rules:   - bump shlib
(bzr r159.1.22)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 nux (0.9.22-0ubuntu1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * debian/rules:
+    - bump shlib
 
  -- Didier Roche <didrocks@ubuntu.com>  Thu, 10 Feb 2011 19:40:51 +0100
 
