--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nux (0.9.22-0ubuntu1) UNRELEASED; urgency=low
   * New upstream release.
   * debian/rules:
     - bump shlib
+  * debian/libnux-0.9-doc.install:
+    - don't install examples, they are not shipped anymore
 
  -- Didier Roche <didrocks@ubuntu.com>  Thu, 10 Feb 2011 19:40:51 +0100
 
