--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (0.9.22-0ubuntu1) UNRELEASED; urgency=low
+nux (0.9.22-0ubuntu1) natty; urgency=low
 
   * New upstream release.
   * debian/rules:
@@ -6,7 +6,7 @@ nux (0.9.22-0ubuntu1) UNRELEASED; urgency=low
   * debian/libnux-0.9-doc.install:
     - don't install examples, they are not shipped anymore
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 10 Feb 2011 19:40:51 +0100
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 10 Feb 2011 20:45:14 +0100
 
 nux (0.9.18-0ubuntu1) natty; urgency=low
 
