--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (0.9.26-0ubuntu1) UNRELEASED; urgency=low
+nux (0.9.26-0ubuntu1) natty; urgency=low
 
   * New upstream release.
     - unity_support_test crashed with SIGSEGV in
@@ -7,7 +7,7 @@ nux (0.9.26-0ubuntu1) UNRELEASED; urgency=low
   * debian/rules:
     - bump shlib
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 17 Feb 2011 19:33:06 +0100
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 17 Feb 2011 20:37:21 +0100
 
 nux (0.9.22-0ubuntu1) natty; urgency=low
 
