--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 nux (0.9.28-0ubuntu1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * debian/rules:
+    - bump shlib
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 24 Feb 2011 19:02:01 +0100
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 24 Feb 2011 19:06:52 +0100
 
 nux (0.9.26-0ubuntu1) natty; urgency=low
 
