--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 nux (0.9.28-0ubuntu1) UNRELEASED; urgency=low
 
   * New upstream release:
+    - BaseWindow should notify change on the visible state (LP: #702702)
+    - Unity FTBFS on armel due to Nux (LP: #721118)
   * debian/rules:
     - bump shlib
 
