- compiz crashed with SIGSEGV in std::basic_string<char,     std::char_traits<char>, std::allocator<char> >::assign() (LP: #729412)   - Unity interface not resized properly when external monitor is used     (LP: #691772)   - unity_support_test crashed with SIGSEGV in     nux::IOpenGLAsmVertexShader::IOpenGLAsmVertexShader() (LP: #709649)   - compiz crashed with SIGSEGV in     nux::GpuRenderStates::SubmitChangeStates() (LP: #719156)   - compiz crashed with SIGSEGV in     nux::GpuRenderStates::SubmitChangeStates() (LP: #724903)   - unity_support_test crashed with SIGSEGV in     nux::IOpenGLAsmVertexShader::IOpenGLAsmVertexShader() (LP: #723531)   - unity_support_test crashed with SIGSEGV in     nux::IOpenGLAsmVertexShader::IOpenGLAsmVertexShader() (LP: #723158)   - unity_support_test crashed with SIGSEGV in     nux::IOpenGLAsmVertexShader::IOpenGLAsmVertexShader() (LP: #727895)
Fixed bugs:
  - LP: #691772
  - LP: #709649
  - LP: #719156
  - LP: #723158
  - LP: #723531
  - LP: #724903
  - LP: #727895
  - LP: #729412

(bzr r159.1.40)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,22 @@
 nux (0.9.32-0ubuntu1) UNRELEASED; urgency=low
 
   * New upstream release.
+    - compiz crashed with SIGSEGV in std::basic_string<char,
+      std::char_traits<char>, std::allocator<char> >::assign() (LP: #729412)
+    - Unity interface not resized properly when external monitor is used
+      (LP: #691772)
+    - unity_support_test crashed with SIGSEGV in
+      nux::IOpenGLAsmVertexShader::IOpenGLAsmVertexShader() (LP: #709649)
+    - compiz crashed with SIGSEGV in
+      nux::GpuRenderStates::SubmitChangeStates() (LP: #719156)
+    - compiz crashed with SIGSEGV in
+      nux::GpuRenderStates::SubmitChangeStates() (LP: #724903)
+    - unity_support_test crashed with SIGSEGV in
+      nux::IOpenGLAsmVertexShader::IOpenGLAsmVertexShader() (LP: #723531)
+    - unity_support_test crashed with SIGSEGV in
+      nux::IOpenGLAsmVertexShader::IOpenGLAsmVertexShader() (LP: #723158)
+    - unity_support_test crashed with SIGSEGV in
+      nux::IOpenGLAsmVertexShader::IOpenGLAsmVertexShader() (LP: #727895)
   * debian/rules:
     - bump shlib
 
