releasing version 0.9.34-0ubuntu1
(bzr r159.1.44)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (0.9.34-0ubuntu1) UNRELEASED; urgency=low
+nux (0.9.34-0ubuntu1) natty; urgency=low
 
   * New upstream release.
     - compiz crashed with SIGSEGV in nux::WindowCompositor::ResetDnDArea()
@@ -11,7 +11,7 @@ nux (0.9.34-0ubuntu1) UNRELEASED; urgency=low
   * debian/rules:
     - bump shlibs
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 17 Mar 2011 16:23:27 +0100
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 17 Mar 2011 17:55:17 +0100
 
 nux (0.9.32-0ubuntu1) natty; urgency=low
 
