--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nux (0.9.34-0ubuntu2) UNRELEASED; urgency=low
+
+  * debian/rules:
+    - bump shlibs
+
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 24 Mar 2011 03:05:21 +0100
+
 nux (0.9.34-0ubuntu1) natty; urgency=low
 
   * New upstream release.
