--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (0.9.36-0ubuntu1) UNRELEASED; urgency=low
+nux (0.9.36-0ubuntu1) natty; urgency=low
 
   * New upstream release.
     - compiz crashed with SIGSEGV in nux::BaseTexture::GetDeviceTexture()
@@ -9,7 +9,7 @@ nux (0.9.36-0ubuntu1) UNRELEASED; urgency=low
   * debian/rules:
     - bump shlibs
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 24 Mar 2011 03:57:35 +0100
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 24 Mar 2011 04:54:54 +0100
 
 nux (0.9.34-0ubuntu1) natty; urgency=low
 
