--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nux (0.9.36-0ubuntu2) UNRELEASED; urgency=low
+
+  * debian/control:
+    - adding libpci-dev build-dep for the new lighter unity_support_tool
+
+ -- Didier Roche <didrocks@ubuntu.com>  Fri, 25 Mar 2011 11:23:18 +0100
+
 nux (0.9.36-0ubuntu1) natty; urgency=low
 
   * New upstream release.
