- compiz crashed with SIGSEGV in nux::WindowCompositor::RenderTopViews()     (LP: #754461)   - compiz crashed with SIGSEGV in nux::Area::InitiateResizeLayout()     (LP: #757709)   - Add ATI Radeon Mobility 7500 to compiz blacklist (LP: #760687)   - Letters cut off at the end in the applications window  (LP: #753083)
Fixed bugs:
  - LP: #753083
  - LP: #754461
  - LP: #757709
  - LP: #760687

(bzr r159.1.60)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
 nux (0.9.44-0ubuntu1) UNRELEASED; urgency=low
 
   * New upstream release.
+    - compiz crashed with SIGSEGV in nux::WindowCompositor::RenderTopViews()
+      (LP: #754461)
+    - compiz crashed with SIGSEGV in nux::Area::InitiateResizeLayout()
+      (LP: #757709)
+    - Add ATI Radeon Mobility 7500 to compiz blacklist (LP: #760687)
+    - Letters cut off at the end in the applications window  (LP: #753083)
 
  -- Didier Roche <didrocks@ubuntu.com>  Thu, 14 Apr 2011 21:19:13 +0200
 
