--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-nux (0.9.44-0ubuntu2) UNRELEASED; urgency=low
+nux (0.9.44-0ubuntu2) natty; urgency=low
 
   * Cherry-pick a fix for black text is on a black background when item is
     selected in dash search filter combobox (LP: #761201)
 
- -- Didier Roche <didrocks@ubuntu.com>  Fri, 15 Apr 2011 12:40:32 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Fri, 15 Apr 2011 12:46:01 +0200
 
 nux (0.9.44-0ubuntu1) natty; urgency=low
 
