--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nux (0.9.46-0ubuntu2) UNRELEASED; urgency=low
+nux (0.9.46-0ubuntu2) natty; urgency=low
 
   * Cherry-pick:
     - fix for "does not display icons until hovered" on old ATI hardware
       (LP: #726033)
 
- -- Didier Roche <didrocks@ubuntu.com>  Wed, 20 Apr 2011 09:07:32 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Wed, 20 Apr 2011 10:06:03 +0200
 
 nux (0.9.46-0ubuntu1) natty; urgency=low
 
