--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (0.9.46-0ubuntu3) UNRELEASED; urgency=low
+nux (0.9.46-0ubuntu3) natty; urgency=low
 
   * Cherry-pick blacklisting additional driver + UNITY_FORCE_START env variable
     to bypass unity/compiz testing:
@@ -7,7 +7,7 @@ nux (0.9.46-0ubuntu3) UNRELEASED; urgency=low
     - [nvidia, 7300, 7400] display freeze when using unity desktop
       (LP: #728745)
 
- -- Didier Roche <didrocks@ubuntu.com>  Wed, 20 Apr 2011 17:09:58 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Wed, 20 Apr 2011 18:08:40 +0200
 
 nux (0.9.46-0ubuntu2) natty; urgency=low
 
