releasing version 0.9.46-0ubuntu4
(bzr r159.1.73)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-nux (0.9.46-0ubuntu4) UNRELEASED; urgency=low
+nux (0.9.46-0ubuntu4) natty; urgency=low
 
   * Cherry-pick one fix to avoid wrong MouseMove event triggering false
     wrong Launcher intellhide behavior (LP: #767250)
 
- -- Didier Roche <didrocks@ubuntu.com>  Wed, 20 Apr 2011 19:33:01 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Wed, 20 Apr 2011 20:07:01 +0200
 
 nux (0.9.46-0ubuntu3) natty; urgency=low
 
