--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (0.9.48-0ubuntu1) UNRELEASED; urgency=low
+nux (0.9.48-0ubuntu1) natty-proposed; urgency=low
 
   * New upstream release.
     - fix compiz crashed with SIGSEGV in nux::IOpenGLShaderProgram::Begin()
