releasing version 0.9.48-0ubuntu3
(bzr r159.1.79)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (0.9.48-0ubuntu3) UNRELEASED; urgency=low
+nux (0.9.48-0ubuntu3) oneiric; urgency=low
 
   * Cherry-pick fix for launcher sometimes doesn't hide when there are
     windows beneath it (LP: #772185)
