--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (0.9.48-0ubuntu4) UNRELEASED; urgency=low
+nux (0.9.48-0ubuntu4) oneiric; urgency=low
 
   * Cherry-pick more fixes:
     - input characters become invisible on switching dash to fullscreen mode
