--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nux (1.0.2-0ubuntu1) UNRELEASED; urgency=low
   * New upstream release.
   * debian/control:
     - add new libxdamage-dev and libxcomposite-dev build-dep
+    - add new libboost1.42-dev dep as well, should be transitionned to 1.46 once
+      compiz is transitionned as well
   * remove debian/patches/01_build_with_gcc46.patch as upstream
   * debian/rules:
     - disable google code tests while building
