--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (1.0.6-0ubuntu1) UNRELEASED; urgency=low
+nux (1.0.6-0ubuntu1) oneiric; urgency=low
 
   * New upstream release.
   * debian/control:
@@ -6,7 +6,7 @@ nux (1.0.6-0ubuntu1) UNRELEASED; urgency=low
   * debian/rules:
     - bump shlib
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 21 Jul 2011 17:16:02 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 21 Jul 2011 18:41:46 +0200
 
 nux (1.0.4-0ubuntu1) oneiric; urgency=low
 
