*  debian/rules:   - bump shlib
(bzr r159.1.99)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 nux (1.0.8-0ubuntu1) UNRELEASED; urgency=low
 
   * New upstream release.
+  *  debian/rules:
+    - bump shlib
 
  -- Didier Roche <didrocks@ubuntu.com>  Mon, 01 Aug 2011 17:03:04 +0200
 
