releasing version 1.0.8-0ubuntu1
(bzr r159.1.100)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nux (1.0.8-0ubuntu1) UNRELEASED; urgency=low
+nux (1.0.8-0ubuntu1) oneiric; urgency=low
 
   * New upstream release.
   *  debian/rules:
     - bump shlib
 
- -- Didier Roche <didrocks@ubuntu.com>  Mon, 01 Aug 2011 17:03:04 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Mon, 01 Aug 2011 19:52:12 +0200
 
 nux (1.0.6-0ubuntu1) oneiric; urgency=low
 
