--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nux (1.0.8-0ubuntu2) UNRELEASED; urgency=low
+nux (1.0.8-0ubuntu2) oneiric; urgency=low
 
   * Cherry-pick upstream:
     - compiz crashed with SIGSEGV in nux::IOpenGLVertexShader
       ::IOpenGLVertexShader() (LP: #819739)
 
- -- Didier Roche <didrocks@ubuntu.com>  Tue, 02 Aug 2011 16:47:04 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Tue, 02 Aug 2011 16:51:02 +0200
 
 nux (1.0.8-0ubuntu1) oneiric; urgency=low
 
