--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nux (1.0.8-0ubuntu3) UNRELEASED; urgency=low
+
+  * debian/control:
+    - transition to boost 1.46
+
+ -- Didier Roche <didrocks@ubuntu.com>  Wed, 10 Aug 2011 10:31:55 +0200
+
 nux (1.0.8-0ubuntu2) oneiric; urgency=low
 
   * Cherry-pick upstream:
