--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-nux (1.2.0-0ubuntu1) UNRELEASED; urgency=low
+nux (1.2.0-0ubuntu1) oneiric; urgency=low
 
   * New upstream release.
   * debian/rules:
     - bump shlib
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 11 Aug 2011 11:04:29 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 11 Aug 2011 18:29:22 +0200
 
 nux (1.0.8-0ubuntu3) oneiric; urgency=low
 
