releasing version 1.6.0-0ubuntu2
(bzr r159.1.122)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (1.6.0-0ubuntu2) UNRELEASED; urgency=low
+nux (1.6.0-0ubuntu2) oneiric; urgency=low
 
   * tools/unity_support_test.c:
     - enables caching startup result
@@ -6,7 +6,7 @@ nux (1.6.0-0ubuntu2) UNRELEASED; urgency=low
     - install new helper to check for unity support before logging into
       session (LP: #842656)
 
- -- Didier Roche <didrocks@ubuntu.com>  Tue, 06 Sep 2011 15:44:25 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Tue, 06 Sep 2011 17:53:03 +0200
 
 nux (1.6.0-0ubuntu1) oneiric; urgency=low
 
