--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (1.8.0-0ubuntu1) UNRELEASED; urgency=low
+nux (1.8.0-0ubuntu1) oneiric; urgency=low
 
   * New upstream release.
     - Unity crashes if you open a quicklist and then the corresponding
@@ -7,7 +7,7 @@ nux (1.8.0-0ubuntu1) UNRELEASED; urgency=low
     - bump shlib
     - remove shlibs restriction (no more ABI breakage until finale)
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 08 Sep 2011 17:33:56 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 08 Sep 2011 20:06:12 +0200
 
 nux (1.6.0-0ubuntu2) oneiric; urgency=low
 
