--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nux (1.10.0-0ubuntu1) UNRELEASED; urgency=low
+nux (1.10.0-0ubuntu1) oneiric; urgency=low
 
   * New upstream release.
     - compiz crashed with SIGSEGV in nux::GpuDevice::GetGpuInfo()
@@ -9,7 +9,7 @@ nux (1.10.0-0ubuntu1) UNRELEASED; urgency=low
     - compiz crashed with SIGSEGV in nux::Area::FindKeyFocusArea()
       (LP: #815114)
 
- -- Didier Roche <didrocks@ubuntu.com>  Thu, 15 Sep 2011 16:15:17 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Thu, 15 Sep 2011 18:42:58 +0200
 
 nux (1.8.0-0ubuntu1) oneiric; urgency=low
 
