--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 nux (1.16.0-0ubuntu1) UNRELEASED; urgency=low
 
   * New upstream release.
+    - Regression: shift+click on a launcher icon to open a new application
+      instance gone (part 1) (LP: #754565)
+    - Fix misc rendering issues and double ref
 
  -- Didier Roche <didrocks@ubuntu.com>  Wed, 12 Oct 2011 13:58:10 +0200
 
