--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-nux (1.16.0-0ubuntu1) UNRELEASED; urgency=low
+nux (1.16.0-0ubuntu1) oneiric; urgency=low
 
   * New upstream release.
     - Regression: shift+click on a launcher icon to open a new application
       instance gone (part 1) (LP: #754565)
     - Fix misc rendering issues and double ref
 
- -- Didier Roche <didrocks@ubuntu.com>  Wed, 12 Oct 2011 13:58:10 +0200
+ -- Didier Roche <didrocks@ubuntu.com>  Mon, 17 Oct 2011 09:10:05 +0200
 
 nux (1.14.0-0ubuntu1) oneiric; urgency=low
 
