--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nux (1.16.0-0ubuntu2) UNRELEASED; urgency=low
+
+  * Don't build anymore the documentation
+
+ -- Didier Roche <didrocks@ubuntu.com>  Tue, 22 Nov 2011 18:55:04 +0100
+
 nux (1.16.0-0ubuntu1) oneiric-proposed; urgency=low
 
   * New upstream release.
