--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 nux (1.16.0-0ubuntu2) UNRELEASED; urgency=low
 
   * Don't build anymore the documentation
+  * debian/control:
+    - add build-dep on libutouch-geis-dev
 
  -- Didier Roche <didrocks@ubuntu.com>  Tue, 22 Nov 2011 18:55:04 +0100
 
