--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 nux (1.16.0-0ubuntu2) UNRELEASED; urgency=low
 
-  * Don't build anymore the documentation
+  * Don't build anymore the documentation and don't gputests files
   * debian/control:
     - add build-dep on libutouch-geis-dev
 
