--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,13 @@
 nux (2.2.0-0ubuntu1) UNRELEASED; urgency=low
 
   * New upstream release.
+    - Dash - Behaviour of the 'All' button in the Dash filters broken in
+      several ways   (LP: #841864)
+    - Launcher, Spread - Clicking on a Launcher app icon a second time to
+      close a spread is broken (LP: #893670)
+    - launcher not hiding in one design-specified case (LP: #919162)
+    - compiz crashed with SIGSEGV in
+      nux::GridHLayout::KeyNavIterationRowOrder() (LP: #916088)
   * Cherry-pick an additional fix for boot time
 
  -- Didier Roche <didrocks@ubuntu.com>  Fri, 03 Feb 2012 08:28:41 +0100
