--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nux (2.4.0-0ubuntu2) UNRELEASED; urgency=low
+
+  * debian/control:
+    - build-dep on libibus-1.0-dev for ibus support
+
+ -- Didier Roche <didrocks@ubuntu.com>  Mon, 20 Feb 2012 19:42:47 +0100
+
 nux (2.4.0-0ubuntu1) precise; urgency=low
 
   * New upstream release.
