--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+nux (2.4.0-0ubuntu2) UNRELEASED; urgency=low
+
+  * debian/patches/01_blacklist_llvmpipe.patch:
+    - Blacklist llvmpipe (LP: #926859)
+
+ -- Didier Roche <didrocks@ubuntu.com>  Mon, 27 Feb 2012 11:22:01 +0100
+
 nux (2.4.0-0ubuntu1) precise; urgency=low
 
   * New upstream release.
