--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-nux (2.4.0-0ubuntu2) UNRELEASED; urgency=low
+nux (2.4.0-0ubuntu2) precise; urgency=low
 
   * debian/patches/01_blacklist_llvmpipe.patch:
     - Blacklist llvmpipe (LP: #926859)
 
- -- Didier Roche <didrocks@ubuntu.com>  Mon, 27 Feb 2012 11:22:01 +0100
+ -- Didier Roche <didrocks@ubuntu.com>  Mon, 27 Feb 2012 12:00:10 +0100
 
 nux (2.4.0-0ubuntu1) precise; urgency=low
 
